# design_pytterns

./: README.md  pyproject.toml
design_pytterns/behavioral/observer/: __init__.py  concrete.py  observer.py  subject.py
design_pytterns/behavioral/strategy/: __init__.py  concrete.py  context.py  strategy.py
tests/behavioral/: observer.py  strategy.py
